# r-dynamic-graph-agent

./: README.md  main.py  pyproject.toml
src/: __init__.py  main.py
src/agents/: graph_agent.py
src/config/: settings.py
src/graph/: builder.py
src/models/: schemas.py
src/tools/: graph_tools.py
