[project]
name = "graph-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-google-genai>=3.0.1",
    "langgraph>=1.0.2",
    "ruff>=0.14.4",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
]

[tool.poe.tasks]
start = "uv run main.py"
test = "pytest tests/"
lint = "ruff check ."
